# gglib

./: .env.example  .gitignore  BADGES.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  boundary.json  build.rs  coverage.json  eslint.config.js  gglib-agent-complexity.json  gglib-agent-context_pruning-complexity.json  gglib-agent-context_pruning-loc.json  gglib-agent-council-complexity.json  gglib-agent-council-estimator-loc.json  gglib-agent-council-events-loc.json  gglib-agent-council-executor-loc.json  gglib-agent-council-history-loc.json  gglib-agent-council-loc.json  gglib-agent-council-orchestrator-complexity.json  gglib-agent-council-orchestrator-loc.json  gglib-agent-council-prompts-loc.json  gglib-agent-council-stance-loc.json  gglib-agent-council-suggest-loc.json  gglib-agent-council-tool_filter_parser-complexity.json  gglib-agent-council-tool_filter_parser-loc.json  gglib-agent-coverage.json  gglib-agent-debate-compaction-loc.json  gglib-agent-debate-complexity.json  gglib-agent-debate-judge-coverage.json  gglib-agent-debate-loc.json  gglib-agent-debate-stream_bridge-coverage.json  gglib-agent-loc.json  gglib-agent-loop_detection-tests-loc.json  gglib-agent-stagnation-loc.json  gglib-agent-stream_collector-coverage.json  gglib-agent-tests.json  gglib-agent-tool_execution-complexity.json  (+513 more)
crates/gglib-agent/: Cargo.toml  README.md
crates/gglib-agent/src/: agent_loop.rs  compose.rs  context_pruning.rs  filter.rs  fnv1a.rs  hash.rs  lib.rs  loop_detection.rs  stagnation.rs  stream_collector.rs  structured_output.rs  testutil.rs  tool_execution.rs  util.rs
crates/gglib-agent/tests/: council_execute.rs  council_hitl.rs  council_plan_eval.rs  integration_agent_loop.rs  integration_context_budget.rs  integration_guards.rs  integration_happy_path.rs  integration_hierarchical_plan.rs  integration_hierarchical_run.rs  integration_spawn_subteam.rs  orchestrator_execute.rs  orchestrator_hitl.rs  orchestrator_plan_eval.rs  unit_agent_loop.rs  unit_context_pruning.rs  unit_debate_node.rs  unit_filter.rs  unit_stream_collector.rs  unit_tool_execution.rs
crates/gglib-app-services/: Cargo.toml  README.md  build.rs
crates/gglib-app-services/src/: council_approvals.rs  downloads.rs  error.rs  helpers.rs  lib.rs  mcp.rs  models.rs  orchestrator_approvals.rs  proxy.rs  servers.rs  settings.rs  setup.rs  test_support.rs  types.rs
crates/gglib-axum/: Cargo.toml  README.md
crates/gglib-axum/src/: agent_components.rs  bootstrap.rs  chat_api.rs  embedded.rs  error.rs  lib.rs  routes.rs  sse.rs  state.rs  ws_audio.rs
crates/gglib-axum/tests/: cors_auth.rs  cors_local_only.rs  embedded_auth.rs  integration_routes.rs  mcp_contract_test.rs  voice_routes.rs
crates/gglib-bootstrap/: Cargo.toml  README.md
crates/gglib-bootstrap/src/: builder.rs  built.rs  config.rs  download_trigger.rs  lib.rs
crates/gglib-bootstrap/tests/: build_error_cases.rs  build_happy_path.rs  functional.rs
crates/gglib-build-info/: Cargo.toml  README.md  build.rs
crates/gglib-build-info/src/: lib.rs
crates/gglib-cli/: Cargo.toml  README.md  build.rs
crates/gglib-cli/src/: assistant_ui_commands.rs  benchmark_commands.rs  bootstrap.rs  commands.rs  config_commands.rs  dispatch.rs  error.rs  lib.rs  llama_commands.rs  main.rs  mcp_commands.rs  model_commands.rs  parser.rs  shared_args.rs
crates/gglib-core/: Cargo.toml  README.md  build.rs
crates/gglib-core/assets/: tune_default_suite.json
crates/gglib-core/src/: cache_config.rs  cache_metrics.rs  is_local_origin.rs  lib.rs  server_config.rs  settings.rs  telemetry.rs
crates/gglib-core/tests/: apply_diff.rs  verification_types.rs
crates/gglib-db/: Cargo.toml  README.md  build.rs
crates/gglib-db/src/: factory.rs  lib.rs  repositories.rs  setup.rs
crates/gglib-download/: Cargo.toml  README.md  build.rs
crates/gglib-download/scripts/: hf_xet_downloader.py
crates/gglib-download/src/: cli_emitter.rs  lib.rs  manager.rs  quant_selector.rs
crates/gglib-gguf/: Cargo.toml  README.md  build.rs
crates/gglib-gguf/src/: error.rs  format.rs  lib.rs  parser.rs  reader.rs  validation.rs
crates/gglib-gui/: Cargo.toml  README.md
crates/gglib-gui/src/: backend.rs  deps.rs  downloads.rs  error.rs  lib.rs  mcp.rs  models.rs  proxy.rs  servers.rs  settings.rs  setup.rs  types.rs  voice.rs
crates/gglib-hf/: Cargo.toml  README.md
crates/gglib-hf/src/: config.rs  error.rs  http.rs  lib.rs  models.rs  parsing.rs  port.rs  url.rs
crates/gglib-mcp/: Cargo.toml  README.md
crates/gglib-mcp/src/: builtin.rs  client.rs  combined.rs  lib.rs  manager.rs  path.rs  service.rs  tool_executor.rs
crates/gglib-proxy/: Cargo.toml  README.md
crates/gglib-proxy/src/: cache_lifecycle.rs  cache_metrics.rs  canonicalization.rs  connections.rs  council_proxy.rs  dashboard.rs  forward.rs  lib.rs  metrics.rs  models.rs  models_tests.rs  ollama_handlers.rs  ollama_models.rs  ollama_stream.rs  orchestrator_proxy.rs  profiles.rs  server.rs  settings_cache.rs  slot_eviction.rs  slots.rs  slots_poller.rs  sse_stream.rs  stream_filter.rs  token_calibration.rs  truncation.rs  upstream_health.rs
crates/gglib-proxy/tests/: integration_cache_clear.rs  integration_cors.rs  integration_inference_profiles.rs  integration_mcp_gateway.rs  integration_proxy_pipeline.rs  integration_slot_roundtrip.rs  integration_virtual_models.rs
crates/gglib-runtime/: Cargo.toml  README.md
crates/gglib-runtime/src/: command.rs  compose.rs  council_runner.rs  health.rs  health_monitor.rs  lib.rs  orchestrator_runner.rs  process_core.rs  runner.rs  server_config.rs
crates/gglib-runtime/tests/: llama_server_availability_tests.rs
crates/gglib-sse/: Cargo.toml  README.md
crates/gglib-sse/src/: lib.rs
crates/gglib-tauri/: Cargo.toml  README.md
crates/gglib-voice/: Cargo.toml  README.md  build.rs
crates/kokoro-tts-custom/: Cargo.toml  build.rs
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  LIFECYCLE.md  README.md  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lifecycle.rs  main.rs  menu.rs
(+1611 files in other folders)
