[workspace]
resolver = "2"
members = [
    "crates/gglib-core",
    "crates/gglib-db",
    "crates/gglib-download",
    "crates/gglib-gguf",
    "crates/gglib-gui",
    "crates/gglib-hf",
    "crates/gglib-build-info",
    "crates/gglib-mcp",
    "crates/gglib-proxy",
    "crates/gglib-runtime",
    "crates/gglib-cli",
    "crates/gglib-axum",
    "crates/gglib-tauri",
    # Legacy monolith - re-enabled for gradual migration, will be removed after extraction complete
    ".",
]
# Tauri app is excluded because it builds separately with its own workspace context
exclude = ["src-tauri"]

# Shared package metadata for all workspace crates
[workspace.package]
version = "0.2.7"
edition = "2024"
license = "GPLv3"
repository = "https://github.com/mmogr/gglib"
authors = ["mmogr"]

# Workspace-wide dependencies: ONLY truly universal crates
# Adapter-specific deps (sqlx, clap, tauri, axum) are defined locally per crate
[workspace.dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Encoding
base64 = "0.22"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async traits
async-trait = "0.1.89"

# Filesystem/system utilities
dirs = "6.0"

# HuggingFace Hub SDK
hf-hub = "0.4"

# HTTP/Networking
reqwest = { version = "0.11", features = ["json", "stream"] }
indicatif = "0.17"
axum = "0.7"
tower-http = { version = "0.6", features = ["cors", "fs"] }
uuid = { version = "1.10", features = ["v4"] }

# System info
sysinfo = "0.36.1"

# Testing
tempfile = "3.8"
mockall = "0.12"

# Internal crates (for migration)
gglib-core = { path = "crates/gglib-core" }
gglib-db = { path = "crates/gglib-db", features = ["test-utils"] }
gglib-download = { path = "crates/gglib-download" }
gglib-gguf = { path = "crates/gglib-gguf" }
gglib-hf = { path = "crates/gglib-hf" }
gglib-mcp = { path = "crates/gglib-mcp" }
gglib-runtime = { path = "crates/gglib-runtime" }

# Workspace-wide lints for consistency
[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow these common patterns
module_name_repetitions = "allow"
must_use_candidate = "allow"
collapsible_if = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# Profile settings apply to all workspace members
[profile.release]
opt-level = 2
lto = "thin"
codegen-units = 16

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 0

# ============================================================================
# Transitional Facade Package
# Provides convenience re-exports during migration. Will be removed.
# New code should import workspace crates directly (gglib-core, gglib-db, etc.)
# ============================================================================

[package]
name = "gglib-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "GGUF model manager and runner"
publish = false  # Transitional scaffolding - do not publish


[dependencies]
# Workspace crates for re-exports
gglib-core.workspace = true
gglib-db.workspace = true
gglib-download.workspace = true
gglib-runtime.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio-test.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
tokio.workspace = true
gglib-gguf.workspace = true
gglib-hf.workspace = true
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
urlencoding = "2.1"

