[workspace]
resolver = "2"
members = [
    "crates/gglib-core",
    "crates/gglib-db",
    "crates/gglib-download",
    "crates/gglib-gguf",
    "crates/gglib-bootstrap",
    "crates/gglib-app-services",
    "crates/gglib-hf",
    "crates/gglib-build-info",
    "crates/gglib-mcp",
    "crates/gglib-proxy",
    "crates/gglib-runtime",
    "crates/gglib-agent",
    "crates/gglib-cli",
    "crates/gglib-axum",
    "crates/gglib-tauri",
    # Tauri desktop app (gglib-app binary)
    "src-tauri",
]

# Shared package metadata for all workspace crates
[workspace.package]
version = "0.7.2"
edition = "2024"
license = "GPLv3"
repository = "https://github.com/mmogr/gglib"
authors = ["mmogr"]

# Workspace-wide dependencies: ONLY truly universal crates
# Adapter-specific deps (sqlx, clap, tauri, axum) are defined locally per crate
[workspace.dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"

# Futures / async streams
# Both crates are published in lock-step from the same futures-rs release; using
# the same constraint here ensures Cargo always resolves them to the same version.
futures-util = { version = "0.3" }
futures-core = { version = "0.3" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# Encoding
base64 = "0.22"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async traits
async-trait = "0.1.89"

# Filesystem/system utilities
dirs = "6.0"

# HuggingFace Hub SDK
hf-hub = "0.4"

# HTTP/Networking
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls"] }
indicatif = "0.18"
crossterm = "0.29"
termimad = "0.34.1"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
uuid = { version = "1.10", features = ["v4"] }

# Tauri
tauri = { version = "2.8.5", features = ["devtools"] }
tauri-build = { version = "2.4.1", features = [] }
tauri-plugin-dialog = "2.6"
dotenvy = "0.15"
open = "5"

# System info
sysinfo = "0.37"

# Testing
tempfile = "3.8"
mockall = "0.14"

# Internal crates (for migration)
gglib-bootstrap = { path = "crates/gglib-bootstrap" }
gglib-core = { path = "crates/gglib-core" }
gglib-db = { path = "crates/gglib-db", features = ["test-utils"] }
gglib-download = { path = "crates/gglib-download" }
gglib-gguf = { path = "crates/gglib-gguf" }
gglib-hf = { path = "crates/gglib-hf" }
gglib-mcp = { path = "crates/gglib-mcp" }
gglib-agent = { path = "crates/gglib-agent" }
gglib-runtime = { path = "crates/gglib-runtime" }
gglib-axum = { path = "crates/gglib-axum" }
gglib-app-services = { path = "crates/gglib-app-services" }
gglib-tauri = { path = "crates/gglib-tauri" }
gglib-build-info = { path = "crates/gglib-build-info" }

# Workspace-wide lints for consistency
[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow these common patterns
module_name_repetitions = "allow"
must_use_candidate = "allow"
collapsible_if = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# Profile settings apply to all workspace members
[profile.release]
opt-level = 2
lto = "thin"
codegen-units = 16

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 0

