[package]
name = "gglib-gui"
version = "1.0.1"
description = "Tauri GUI for GGLib - GGUF Model Manager"
authors = ["mmogr"]
license = "MIT"
repository = "https://github.com/mmogr/gglib"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = [] }
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gglib = { path = ".." }
tokio = { version = "1.48.0", features = ["sync", "rt-multi-thread"] }
axum = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
