[package]
name = "gglib-app"
version = "0.2.5"
description = "Tauri GUI for GGLib - GGUF Model Manager"
authors = ["mmogr"]
license = "GPLv3"
repository = "https://github.com/mmogr/gglib"
edition = "2024"

# Prevent this package from being part of the parent workspace
# Tauri builds separately with its own workspace context
[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = ["devtools"] }
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
gglib-core = { path = "../crates/gglib-core" }
gglib-download = { path = "../crates/gglib-download" }
gglib-mcp = { path = "../crates/gglib-mcp" }
gglib-db = { path = "../crates/gglib-db" }
gglib-runtime = { path = "../crates/gglib-runtime", features = ["prebuilt"] }
gglib-tauri = { path = "../crates/gglib-tauri" }
gglib-axum = { path = "../crates/gglib-axum" }
gglib-gui = { path = "../crates/gglib-gui" }
tokio = { version = "1.48.0", features = ["sync", "rt-multi-thread"] }
axum = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
open = "5"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
