[package]
name = "gglib-app"
version.workspace = true
description = "Tauri GUI for GGLib - GGUF Model Manager"
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build.workspace = true

[dependencies]
tauri.workspace = true
tauri-plugin-dialog.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
gglib-build-info.workspace = true
gglib-core.workspace = true
gglib-download.workspace = true
gglib-mcp.workspace = true
gglib-db.workspace = true
gglib-runtime = { workspace = true, features = ["prebuilt"] }
gglib-tauri.workspace = true
gglib-axum.workspace = true
gglib-gui.workspace = true
gglib-voice.workspace = true
tokio.workspace = true
# Note: axum and tower-http are used via gglib-axum re-exports, no direct dependency needed
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender = "0.2"
open.workspace = true

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
# Forward voice backend features to gglib-voice
sherpa = ["gglib-voice/sherpa"]
default = ["sherpa"]
