[package]
name = "gglib-agent"
version.workspace = true
edition.workspace = true
description = "Pure-domain agentic loop implementation for gglib"
license.workspace = true
publish = false

[lib]
name = "gglib_agent"
path = "src/lib.rs"

[dependencies]
# Domain and composition dependencies.
# gglib-core provides port traits; gglib-mcp and gglib-runtime are wired in
# compose.rs (the single composition root for the agentic loop).
gglib-core    = { path = "../gglib-core" }
gglib-mcp     = { path = "../gglib-mcp" }
gglib-runtime = { path = "../gglib-runtime" }
reqwest       = { workspace = true }
tokio         = { workspace = true }
futures-util = { workspace = true }
futures-core = { workspace = true }
async-trait  = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
serde_json   = { workspace = true }

[lints]
workspace = true
