[package]
name = "gglib-agent"
version.workspace = true
edition.workspace = true
description = "Pure-domain agentic loop for gglib (no HTTP/infra dependencies)"
license.workspace = true
publish = false

[lib]
name = "gglib_agent"
path = "src/lib.rs"

[dependencies]
# Domain-only dependencies: no HTTP client, no MCP infrastructure.
# Composition (wiring LlmCompletionAdapter + McpToolExecutorAdapter into
# AgentLoop) is performed by each entrypoint crate (gglib-axum, gglib-cli).
gglib-core   = { path = "../gglib-core" }
thiserror    = { workspace = true }
tokio        = { workspace = true }
futures-util = { workspace = true }
futures-core = { workspace = true }
async-trait  = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
uuid         = { version = "1.10", features = ["v4"] }
chrono       = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
gglib-runtime       = { path = "../gglib-runtime" }
gglib-app-services  = { path = "../gglib-app-services" }
gglib-db            = { path = "../gglib-db", features = ["test-utils"] }
reqwest             = { workspace = true }
tokio               = { workspace = true, features = ["rt-multi-thread", "macros"] }
