[package]
name = "gglib-app-services"
version.workspace = true
edition.workspace = true
description = "Shared application service ops for gglib adapters (Tauri, Axum)"
license.workspace = true
publish = false
build = "build.rs"

[lib]
name = "gglib_app_services"
path = "src/lib.rs"

[dependencies]
# Core domain and ports only - no adapter crates
gglib-core = { path = "../gglib-core" }
gglib-download = { path = "../gglib-download" }
gglib-mcp = { path = "../gglib-mcp" }
gglib-hf = { path = "../gglib-hf" }
gglib-proxy = { path = "../gglib-proxy" }
gglib-runtime = { path = "../gglib-runtime", features = ["prebuilt"] }
# Pure-domain agentic loop (no HTTP/infra deps of its own — see its own
# Cargo.toml). Used only by the tune service to drive AgentLoop::build()
# directly with a local ScoringToolExecutorPort; compose_agent_loop() in
# gglib-runtime is not reusable here since it hardwires an MCP tool
# executor. Only gglib-agent's [dependencies] (its library) are pulled in —
# its [dev-dependencies] (e.g. test-only mock executors) never ship in any
# downstream binary, Cargo excludes them by construction.
gglib-agent = { path = "../gglib-agent" }

# Shared deps
anyhow = { workspace = true }
chrono = { workspace = true }
futures-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }

# Async
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
async-trait = "0.1"
tokio-util = "0.7"
futures-util = "0.3"

# Approval registry
dashmap = "6"

[dev-dependencies]
tokio-test = { workspace = true }
gglib-db = { path = "../gglib-db", features = ["test-utils"] }
tempfile = { workspace = true }

[lints.rust]
unsafe_code = "deny"
