[package]
name = "gglib-axum"
version = "0.1.0"
edition = "2024"
description = "Axum web server adapter for gglib"
license = "MIT"
publish = false

[lib]
name = "gglib_axum"
path = "src/lib.rs"

[dependencies]
gglib-core = { path = "../gglib-core" }
gglib-db = { path = "../gglib-db" }
gglib-mcp = { path = "../gglib-mcp" }
gglib-runtime = { path = "../gglib-runtime" }

# Root crate for access to legacy handlers (temporary until migration)
gglib = { path = "../.." }

# Shared deps
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# Axum-specific dependencies - defined locally, not in workspace
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

# These will be uncommented as handlers are migrated:
# serde_json = { workspace = true }
# tracing-subscriber = { workspace = true }
# async-trait = { workspace = true }
# tower = "0.4"
# hyper = { version = "1.0", features = ["client", "http1", "http2"] }
# hyper-util = { version = "0.1", features = ["client-legacy", "http1", "http2", "tokio"] }
# http-body-util = "0.1"
# bytes = "1.5"
# futures-util = "0.3"
# tokio-stream = { version = "0.1.17", features = ["sync"] }

[dev-dependencies]
tokio-test = { workspace = true }

[lints.rust]
unsafe_code = "deny"
