[package]
name = "gglib-axum"
version.workspace = true
edition.workspace = true
description = "Axum web server adapter for gglib"
license = "GPLv3"
publish = false

[lib]
name = "gglib_axum"
path = "src/lib.rs"

[dependencies]
gglib-core = { path = "../gglib-core" }
gglib-db = { path = "../gglib-db" }
gglib-download = { path = "../gglib-download" }
gglib-gguf = { path = "../gglib-gguf" }  # GGUF_BOOTSTRAP_EXCEPTION: Parser injected at composition root
gglib-gui = { path = "../gglib-gui" }
gglib-hf = { path = "../gglib-hf" }
gglib-mcp = { path = "../gglib-mcp" }
gglib-runtime = { path = "../gglib-runtime" }
gglib-voice = { path = "../gglib-voice" }  # Composition root: constructs VoiceService and injects into GuiDeps

# Shared deps
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }

# Axum-specific dependencies - use workspace versions for consistency
axum = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

# These will be uncommented as handlers are migrated:
# serde_json = { workspace = true }
# tracing-subscriber = { workspace = true }
# async-trait = { workspace = true }
# tower = "0.4"
# hyper = { version = "1.0", features = ["client", "http1", "http2"] }
# hyper-util = { version = "0.1", features = ["client-legacy", "http1", "http2", "tokio"] }
# http-body-util = "0.1"
# bytes = "1.5"
# futures-util = "0.3"
# tokio-stream = { version = "0.1.17", features = ["sync"] }

[dev-dependencies]
tokio-test = { workspace = true }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hyper = "1.0"
tempfile = "3.10"

[lints.rust]
unsafe_code = "deny"
