[package]
name = "gglib-cli"
version = "0.1.0"
edition = "2024"
description = "CLI interface for gglib"
license = "MIT"
publish = false

[[bin]]
name = "gglib"
path = "src/main.rs"

[dependencies]
gglib-core = { path = "../gglib-core" }
gglib-db = { path = "../gglib-db" }
# Root crate for AppCore and services (temporary until AppCore moves to core)
gglib = { path = "../.." }

# CLI-specific dependencies
clap = { version = "4.0", features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
dotenvy = "0.15"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }

[lints.rust]
unsafe_code = "deny"
