[package]
name = "gglib-cli"
version.workspace = true
edition.workspace = true
description = "CLI interface for gglib"
license.workspace = true
publish = false

[[bin]]
name = "gglib"
path = "src/main.rs"

[dependencies]
gglib-axum = { path = "../gglib-axum" }
gglib-build-info = { path = "../gglib-build-info" }
gglib-core = { path = "../gglib-core" }
gglib-db = { path = "../gglib-db" }
gglib-download = { path = "../gglib-download" }
gglib-gguf = { path = "../gglib-gguf" }  # GGUF_BOOTSTRAP_EXCEPTION: Parser injected at composition root
gglib-hf = { path = "../gglib-hf" }
gglib-mcp = { path = "../gglib-mcp" }
gglib-runtime = { path = "../gglib-runtime", features = ["cli"] }

# CLI-specific dependencies
clap = { version = "4.0", features = ["derive", "env"] }
chrono = { workspace = true }
hf-hub = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
dotenvy = "0.15"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }

[lints.rust]
unsafe_code = "deny"
