[package]
name = "gglib-cli"
version.workspace = true
edition.workspace = true
description = "CLI interface for gglib"
license.workspace = true
publish = false

[[bin]]
name = "gglib"
path = "src/main.rs"

[dependencies]
gglib-agent = { path = "../gglib-agent" }
gglib-axum = { path = "../gglib-axum" }
gglib-bootstrap = { path = "../gglib-bootstrap" }
gglib-build-info = { path = "../gglib-build-info" }
gglib-core = { path = "../gglib-core" }
gglib-download = { path = "../gglib-download" }
gglib-hf = { path = "../gglib-hf" }
gglib-mcp = { path = "../gglib-mcp" }
gglib-runtime = { path = "../gglib-runtime", features = ["cli"] }
reqwest = { workspace = true }

# CLI-specific dependencies
clap = { version = "4.0", features = ["derive", "env"] }
clap_complete = "4"
indicatif = { workspace = true }
termimad = { workspace = true }
crossterm = { workspace = true }
# `console` is the input-side companion to indicatif (same authors). Used by the
# interactive download monitor for single-keystroke reads (`Term::read_key`) and
# cooked-mode line input (`Term::read_line`). Importing directly (rather than
# relying on indicatif's transitive dep) makes the dependency explicit.
console = "0.16"
chrono = { workspace = true }
serde_json = { workspace = true }
hf-hub = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
dotenvy = "0.15"
rustyline = "14"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }

[lints.rust]
unsafe_code = "deny"
