[package]
name = "gglib-core"
version.workspace = true
edition.workspace = true
description = "Core domain types and port definitions for gglib"
license.workspace = true
publish = false

[dependencies]
# Only deps actually used in core - no adapter-specific crates
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
bitflags = "2.6"
uuid = { version = "1.11", features = ["serde", "v4"] }

[dev-dependencies]
mockall = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
tokio-test = { workspace = true }

[lints]
workspace = true
