[package]
name = "gglib-db"
version.workspace = true
edition.workspace = true
description = "SQLite repository implementations for gglib"
license.workspace = true
publish = false

[features]
default = ["sqlite"]
sqlite = []
test-utils = []

[dependencies]
gglib-core = { path = "../gglib-core" }

# Universal dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }

# DB-specific dependencies - defined locally, not in workspace
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
libsqlite3-sys = { version = "0.27", features = ["bundled", "unlock_notify"] }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }

[lints.rust]
unsafe_code = "deny"
