[package]
name = "gglib-gguf"
version.workspace = true
edition.workspace = true
description = "GGUF file format parsing for gglib"
license.workspace = true
publish = false

[features]
default = ["mmap"]
mmap = ["dep:memmap2"]
std = []

[dependencies]
# Core domain types and port definitions
gglib-core = { path = "../gglib-core" }

# Logging
tracing = { workspace = true }

# Memory-mapped file reading (optional, default enabled)
memmap2 = { version = "0.9", optional = true }

[lints]
workspace = true
