[package]
name = "gglib-mcp"
version = "0.1.0"
edition = "2024"
description = "MCP (Model Context Protocol) server management for gglib"
license = "MIT"
publish = false

[dependencies]
# Core domain types and ports only - no sqlx
gglib-core = { path = "../gglib-core" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-test = { workspace = true }
async-trait = { workspace = true }

[lints]
workspace = true
